--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FakeStoreChallenge</string>
+    <string name="products">Products</string>
+    <string name="error_loading_product_detail">Error loading product detail</string>
 </resources>
